--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "NODE_OPTIONS='--dns-result-order=ipv4first' next start -p ${PORT:-3005}",
     "lint": "next lint --max-warnings 9999",
     "type-check": "tsc --noEmit",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
     "sonar": "sonar-scanner",
     "prepare": "husky"
   },
@@ -51,25 +52,26 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
-    "@types/jest": "^29.5.14",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
+    "@vitest/ui": "^2.1.8",
+    "@vitest/coverage-v8": "^2.1.8",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.33",
     "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
     "lint-staged": "^15.2.11",
     "postcss": "^8.4.49",
     "prettier": "^3.6.2",
     "sonarqube-scanner": "^3.3.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^2.1.8"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
