--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "scripts"]
+  "exclude": ["node_modules", "scripts", "__tests__", "**/*.test.ts", "**/*.spec.ts", "vitest.config.ts"]
 }
 
