--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.263.1",
     "mammoth": "^1.8.0",
-    "next": "14.2.33",
+    "next": "^14.2.35",
     "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
